Add three images justified and styled differently.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <section class="section j-start">
+        <img class="image image__one" src="https://picsum.photos/150/150" alt="A random image" />
+    </section>
+
+    <section class="section j-center">
+        <img class="image image__two" src="https://picsum.photos/150/150" alt="A random image" />
+    </section>
+
+    <section class="section j-end">
+        <img class="image image__three" src="https://picsum.photos/150/150" alt="A random image" />
+    </section>
 </body>
 </html>
