Add display.html to demonstrate block vs inline display properties

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header>
         <nav>
             <ul>
-                <li><a href="./index.html">Visited Link</a></li>
-                <li><a>Unvisited Link</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./display.html">Display</a></li>
                 <li><a>Unvisited Link</a></li>
             </ul>
         </nav>
